2000-07-10  Dan Winship  <danw@helixcode.com>

	* kill more debugging messages

	* mail-ops.c (real_fetch_mail): Don't multiply free dest_url.

	* message-list.c (message_list_select): Update
	message_list_select_next to do either next or previous.

	* folder-browser.c (etable_key): Make 'n' and 'p' do next and
	previous unread message.

	* mail-ops.c (select_first_unread): Update.
	(real_fetch_mail): clean up a bit.

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (forward_msg): Initialize `fwd_subj' to NULL if
	`from' is NULL.

2000-07-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Fixed broken POP fetching

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c: Removed variable `browsers'.
	(create_view): Don't update it.
	(owner_unset_cb): Don't sync the folders here anymore, because at
	this point the folder browser is dead already so we cannot get a
	valid list of folders from it anymore.

	* folder-browser.c (folder_browser_destroy): Sync the associated
	mailbox first.

2000-07-10  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c, message-list.h: Switched from ETable to
	ETableScrolled.

2000-07-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Fixed movemail so that it too would
	deliver to Inbox.

2000-07-09  Dan Winship  <danw@helixcode.com>

	* message-list.c (get_message_info): Don't g_warn if the user
	selects a fake tree parent.
	(message_list_select_next): Ignore fake rows
	(build_tree): Store the "root_subject" for fake rows
	(ml_tree_value_at): Display the correct subject for fake rows.
	(on_cursor_change_cmd): Update for the other changes and set
	cursor_uid to NULL when the cursor is on a fake row.

	* mail-ops.c (reply): Don't try to reply when no (real) message is
	selected.
	(forward_msg): Ditto.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Remove setting of dnd_code since that's handled