@@ -1,5 +1,8 @@
 2000-07-10  Dan Winship  <danw@helixcode.com>
 
+	* folder-browser-factory.c (control_activate): Work with both
+	current and 0.15 bonobo
+
 	* kill more debugging messages
 
 	* mail-ops.c (real_fetch_mail): Don't multiply free dest_url.
